<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".views.activities.Landing">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/diplomado"
        android:textColor="@color/im_check_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_selector"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/info_text"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/seleccionaFormula" />

            <Spinner
                android:id="@+id/planets_spinner"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="10sp"
                android:gravity="center|center_horizontal|center_vertical" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/ivFormula"
        android:layout_width="306dp"
        android:layout_height="163dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/segundo_grado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_selector" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_values"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivFormula">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginRight="10sp"
                    android:text="@string/a"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/input1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:inputType="numberSigned|number|numberDecimal"
                    android:numeric="signed|decimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginRight="10sp"
                    android:text="@string/b"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/input2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:inputType="numberSigned|number|numberDecimal"
                    android:numeric="signed|decimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginRight="10sp"
                    android:text="@string/c"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/input3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:inputType="numberSigned|number|numberDecimal"
                    android:numeric="signed|decimal" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="calcular"
        android:text="@string/calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_values" />

</androidx.constraintlayout.widget.ConstraintLayout>